engine/inkscape/inkscape-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inkscape-0
  labels:
    app: inkscape
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inkscape-0
  template:
    metadata:
      labels:
        app: inkscape-0
    spec:
      containers:
      - name: inkscape
        image: topiaas/inkscape
        ports:
        - containerPort: 80
